--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zzz.screenlocker"
-    android:versionCode="1"
-    android:versionName="1.5" >
+    android:versionCode="2"
+    android:versionName="2.5" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@android:drawable/ic_lock_power_off"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
